CircleImageView 라이브러리의 속성 적용

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:src="@drawable/yuna_kim"
+            app:civ_border_width="2dp"
             android:scaleType="centerCrop"/>
 
         <TextView
