--- a/app/src/main/res/layout/activity_view_photo.xml
+++ b/app/src/main/res/layout/activity_view_photo.xml
@@ -8,7 +8,7 @@
     android:background="@color/black"
     tools:context=".ViewPhotoActivity">
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/yuna_kim"/>
