--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,8 +9,10 @@
     tools:context=".SplashActivity">
 
 
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@mipmap/ic_launcher"/>
+        app:lottie_rawRes="@raw/flying_plane"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
 </LinearLayout>
